--- a/funfact.html
+++ b/funfact.html
@@ -8,7 +8,13 @@
         <div style="text-align: center;">
             <span style="color: #037373;">this is the page of facts you can stay and learn some facts or you can go ans check the other page.
 
+                <div style="text-align: center; margin-top: 150px;" >
+                    <img height="400px" src="1.jpeg" />
+                    <div style="font-size: 25px;">
+                        funfact did you know that if you bury plastic it will absorb over up to 1000 years depending what type of plastic it is.
 
+                    </div>
+                </div>
         </div>
     </body>
 </html> 
